2002-06-30  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/update.c (apply_window_updates):
	fixed applying neverfocus to currently focused window; decorations
	partially drawn hilighted

2002-07-05  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menucmd.c (menu_func):
	another module/menu/context window fix
	do not use global Fw anymore

2002-07-05  olicha  <olivier.chapuis@free.fr>

	* libs/Flocale.c (FlocaleStringToString2b):
	Fixed crash with big5-0 FontStruct

2002-07-04  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menucmd.c (menu_func):
	fixed context window of menus invoked by a module
	(menu_func):
	fixed context menus on windows

	* libs/vpacket.h (ConfigWinPacket):
	* fvwm/module_interface.c (CONFIGARGSNEW):
	* fvwm/fvwm.h (FvwmWindow):
	fixed bugs in type conversions for transmitting certain information to
	modules

	* fvwm/functions.c (CheckActionType):
	fixed window selection problem w/ menus invoked from modules

2002-07-03  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/gnome.c (GNOME_HandlePropRequest):
	-Wall fixes

	* fvwm/module_interface.c (ExecuteCommandQueue):
	fixed compile bug w/ --enable-debug-msgs

2002-06-30  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleButtonPress):
	(HandleKeyPress):
	* fvwm/menus.c (MenuInteraction):
	(do_menu):
	* fvwm/windowlist.c (CMD_WindowList):
	* fvwm/menucmd.c (menu_func):
	* fvwm/module_interface.c (ExecuteModuleCommand):
	* fvwm/add_window.c (adjust_fvwm_internal_windows):
	go away, evil globals! [removed the useless global variable
	"ButtonWindow"]

	* fvwm/events.c (HandleUnmapNotify):
	(HandleMapNotify):
	* fvwm/icons.c (Iconify):
	* fvwm/window_flags.h (IS_ICONIFY_PENDING):
	* fvwm/fvwm.h (struct):
	renamed is_deiconify_pending to is_iconify_pending
	some re-indenting

2002-06-29  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (MenuInteraction):
	(pop_menu_down):
	(menu_enter_tear_off_menu):
	(do_menu):
	* fvwm/events.c (HandleButtonPress):
	(HandleButtonRelease):
	(HandleKeyPress):